<resources>
    <string name="app_name">AndroidSensorTest</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar o registrarse</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Nombre de usuario no válido</string>
    <string name="invalid_password">Contraseña debería ser >4 carácteres</string>
    <string name="login_failed">"Login Error"</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Primer Fragment</string>
    <string name="second_fragment_label">Segundo Fragment</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>

    <string name="data_first_frag_Giro">Gy X: 0.0\nGy Y: 0.0\nGy Z: 0.0</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start">Empezar</string>
    <string name="mensajeh">Horizontal</string>
    <string name="data_first_frag_Acel">Acel X: 0.0\nAcel Y: 0.0\nAcel Z: 0.0</string>
    <string name="mensajem">Quieto</string>
</resources>