<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/mensaje_movimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensajem"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textview_Giros_Data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mensaje_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensajeh"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/startStopButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_Acel_Data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_first_frag_Acel"
        app:layout_constraintBottom_toTopOf="@id/button_next_fragment"
        app:layout_constraintEnd_toStartOf="@+id/textview_Giros_Data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_Giros_Data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_first_frag_Giro"
        app:layout_constraintBottom_toTopOf="@id/button_next_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_Acel_Data"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_next_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_Acel_Data" />

    <Button
        android:id="@+id/startStopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/button_next_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_Acel_Data" />
</android.support.constraint.ConstraintLayout>